# runic

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  codspeed.yml  release.yml
crates/ferralloc/: Cargo.toml
crates/ferralloc-bench/: Cargo.toml
crates/ferralloc-bench/benches/common/: mod.rs
crates/ferralloc-bench/src/: allocation.rs  allocator_target.rs  global_workload.rs  rng.rs  rss.rs  threaded.rs  workload.rs
crates/ferralloc-core/: Cargo.toml
crates/ferralloc-core/src/: allocator.rs  extent.rs  extent_table.rs  free_list.rs  heap.rs  layout.rs  lib.rs  os_memory.rs  page_map.rs  run.rs  run_table.rs  size_class.rs  span.rs  span_map.rs  span_table.rs  state.rs
crates/ferralloc-core/tests/: manual_alloc.rs
crates/ferralloc-test-support/: Cargo.toml
crates/ferralloc/src/: global.rs  lib.rs
crates/ferralloc/tests/: abort_cases.rs  global_smoke.rs
crates/runic/: Cargo.toml  README.md
crates/runic-bench/: Cargo.toml
crates/runic-bench/benches/: README.md  compare_explicit.rs  compare_threaded.rs  explicit.rs  global_runic.rs  threaded.rs
crates/runic-bench/benches/common/: explicit.rs  threaded.rs
crates/runic-bench/src/: README.md  allocator_target.rs  workload.rs
crates/runic-core/: AGENTS.md  Cargo.toml  README.md
crates/runic-core/src/: AGENTS.md  README.md  allocation.rs  allocator.rs  arena.rs  config.rs  extent.rs  extent_table.rs  heap.rs  layout.rs  lib.rs  local.rs  mapping_cache.rs  metadata_slot.rs  os_memory.rs  ownership.rs  page_map.rs  run.rs  run_table.rs  size_class.rs  slot_store.rs
crates/runic-core/src/extent/: AGENTS.md  README.md  allocator.rs  arena.rs  cache.rs  heap.rs  mapping_cache.rs  mod.rs  table.rs
crates/runic-core/src/heap/: README.md  id.rs  mod.rs  owner.rs
crates/runic-core/src/heap/extent/: AGENTS.md  README.md  arena.rs  cache.rs  heap.rs  mod.rs
crates/runic-core/src/heap/run/: AGENTS.md  README.md  arena.rs  cache.rs  heap.rs  mod.rs
crates/runic-core/src/heap/table/: AGENTS.md  inbox.rs  mod.rs  remote.rs  slot.rs  thread.rs
crates/runic-core/src/memory/: AGENTS.md  README.md  address.rs  mod.rs  os.rs  page_map.rs
crates/runic-core/src/memory/page_map/: entry.rs  mod.rs  page.rs  span.rs  table.rs  tests.rs
crates/runic-core/src/run/: AGENTS.md  README.md  allocator.rs  arena.rs  free_list.rs  heap.rs  mod.rs  table.rs
crates/runic-core/tests/: manual_alloc.rs
crates/runic-test-support/: Cargo.toml
crates/runic/src/: global.rs  lib.rs
crates/runic/tests/: abort_cases.rs  global_smoke.rs
docs/: allocator-hardening-policy.md  backend-release-policy.md  ferralloc-vision.md  hugepage-backend-exploration.md  remote-free-protocol.md  span-ownership-evaluation.md  thread-local-frontend-scope.md  thread-local-heap-plan.md  v0.1-plan.md
scripts/: profile.sh
