[workspace]
members = [
  "crates/runic",
  "crates/runic-core",
  "crates/runic-test-support",
  "crates/runic-bench",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/botirkhaltaev/runic"
description = "A correctness-first Rust allocator"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]

# Deny correctness issues (likely bugs)
correctness = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
pedantic = "warn"
